--- a/BookApplication/Views/Home/Index.cshtml
+++ b/BookApplication/Views/Home/Index.cshtml
@@ -17,6 +17,7 @@
                 <ul class="list-unstyled" data-bind="foreach: books">
                     <li>
                         <strong><span data-bind="text: AuthorName"></span></strong>: <span data-bind="text: Title"></span>
+                        <!-- New code -->
                         <small><a href="#" data-bind="click: $parent.getBookDetail">Details</a></small>
                     </li>
                 </ul>
@@ -26,6 +27,7 @@
     </div>
 
     <!-- ko if:detail() -->
+
     <div class="col-md-4">
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -40,6 +42,7 @@
             </table>
         </div>
     </div>
+
     <!-- /ko -->
 
     <div class="col-md-4">
@@ -60,22 +63,22 @@
                     <div class="form-group" data-bind="with: newBook">
                         <label for="inputTitle" class="col-sm-2 control-label">Title</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="inputTitle" data-bind="value:Title" />
+                            <input type="text" class="form-control" id="inputTitle" data-bind="value:Title" placeholder="Title" />
                         </div>
 
                         <label for="inputYear" class="col-sm-2 control-label">Year</label>
                         <div class="col-sm-10">
-                            <input type="number" class="form-control" id="inputYear" data-bind="value:Year" />
+                            <input type="number" class="form-control" id="inputYear" data-bind="value:Year" placeholder="1900" />
                         </div>
 
                         <label for="inputGenre" class="col-sm-2 control-label">Genre</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="inputGenre" data-bind="value:Genre" />
+                            <input type="text" class="form-control" id="inputGenre" data-bind="value:Genre" placeholder="Fiction" />
                         </div>
 
                         <label for="inputPrice" class="col-sm-2 control-label">Price</label>
                         <div class="col-sm-10">
-                            <input type="number" step="any" class="form-control" id="inputPrice" data-bind="value:Price" />
+                            <input type="number" step="any" class="form-control" id="inputPrice" data-bind="value:Price" placeholder="0.00" />
                         </div>
                     </div>
                     <button type="submit" class="btn btn-default">Submit</button>
@@ -83,4 +86,6 @@
             </div>
         </div>
     </div>
+
+
 </div>
